--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_ethereal",
+  "name": "test_resuelve",
   "version": "0.0.1",
   "description": "A simple architecture based react and reflux",
   "main": "server.js",
