--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
-public/src/js/bundle.js
-public/dist/css/styles.min.css
-public/dist/js/all_dist.js
+#public/src/js/bundle.js
+#public/dist/css/styles.min.css
+#public/dist/js/all_dist.js
 .idea/
 v8-compile-cache-0/
 #app/conf/conf.js
-public/index.html
+#public/index.html
 package-lock.json
